fixing slider in home and about with nurses imgs on mobile

--- a/src/styles/components/NurseCard.scss
+++ b/src/styles/components/NurseCard.scss
@@ -3,10 +3,7 @@
 .card-container {
   width: 25.1vw;
   height: 65vh;
-  border-top-right-radius: 24px;
-  border-top-left-radius: 24px;
-  border-bottom-left-radius: 24px;
-  border-bottom-right-radius: 24px;
+  border-radius: 24px;
   padding-bottom: 90px;
   // background-color: red;
   display: flex;
@@ -25,11 +22,12 @@
     justify-content: center;
     .nurse-img {
       width: 350px;
-      height: 415px;
+      height: 414px;
       border-radius: 24px;
       // box-shadow: rgba(0, 0, 0, 0.06) 4px 4px 4px 4px inset;
       background-position: center;
       background-size: cover;
+      background-repeat: no-repeat;
     }
   }
   .details-container {
@@ -43,8 +41,8 @@
     // opacity: 1;
     // position: absolute;
     // bottom: 0;
-    border-bottom-left-radius: 24px;
-    border-bottom-right-radius: 24px;
+    // border-bottom-left-radius: 24px;
+    // border-bottom-right-radius: 24px;
     // background-color: red;
     .details-wrapper {
       height: 82.5%;
@@ -100,18 +98,18 @@
       align-items: center;
       justify-content: center;
       .nurse-img {
-        width: 350px;
-        height: 415px;
+        width: 95%;
+        height: 450px;
         border-radius: 24px;
-        // box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+        box-shadow: rgba(0, 0, 0, 0.06) 4px 4px 4px 4px inset;
         // border: 1px solid $gray-3;
-        background-size: 100%;
-        background-position: center;
+        background-size: cover;
+        background-position: bottom;
       }
     }
     .details-container {
       .details-wrapper {
-        width: 90vw;
+        width: 95vw;
       }
     }
   }
