--- a/src/styles/components/Slider.scss
+++ b/src/styles/components/Slider.scss
@@ -153,7 +153,7 @@
   .slider-container {
     padding-top: 0px;
     width: 100%;
-    height: 45%;
+    height: 100%;
 
     // position: static;
     .arrow {
