--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -7,12 +7,15 @@
   scroll-snap-type: y mandatory;
 
   .hero-section {
-    max-width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    scroll-snap-align: end;
+    .home-slider-container {
+      max-width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      // scroll-snap-align: end;
+    }
+
     .welcome-title-mobile-container {
       display: none;
     }
@@ -196,34 +199,37 @@
     width: 100vh;
     height: 100%;
     // background-color: $gray-0;
-    margin-bottom: 60px;
+    margin-bottom: 65px;
 
     .hero-section {
       width: 100%;
-      height: calc(100vh - 160px);
-
-      // background-color: #fff;
-
+      height: 100%;
+      // background-color: red;
       margin-top: 90px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-end;
+      .home-slider-container {
+        width: 100%;
+        height: calc(50svh - 90px);
+        // background-color: red;
+      }
       .welcome-title-mobile-container {
-        // background-color: black;
-        height: 40%;
+        height: calc(50svh - 90px);
         display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        // margin-bottom: 0px;
+        // background-color: green;
+        margin-top: 0px;
 
         .welcome-title-mobile {
           color: $gray-5;
           font-family: "Merri";
           font-size: $xxx-large;
           line-height: 42px;
-          letter-spacing: 2px;
-          // margin-bottom: 0px;
+          letter-spacing: 1px;
+          color: $dark-blue;
+          // background-color: black;
+          height: 100%;
           span {
             font-size: $medium;
             font-weight: 900;
